# ome-writers

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README2.md  TODO  example.py  example_az.py  plan.md  pyproject.toml  test_implicit_bounds.py  test_large_size_limit.py  test_resize.py  test_resize2.py  test_resize3.py  x.py  y.py  zensical.toml
.github/workflows/: ci.yml  docs.yml
docs/: index.md  install.md  performance.md  usage.md
docs/examples/: event_driven.md  pymmcore_plus.md
docs/formats/: index.md  scratch.md  tiff.md  zarr.md
examples/: acquire_hcs_zarr_direct.py  acquire_zarr_direct.py  acquire_zarr_direct_hcs.py  acquire_zarr_plate.py  acquire_zarr_transposed.py  basic_example.py  bench.py  event_driven.py  frame_skipping.py  from_useq_schema.py  hcs_acquire_zarr_direct.py  hcs_pymmcore_plus_example.py  multiposition_5d_images.py  ndv_unbounded_example.py  ndv_viewer_example.py  new_schema_image.py  new_schema_plate.py  ngff_useq_schema_example.py  ngff_zarr_hcs_pymmc_example.py  ngff_zarr_pymmc_example.py  ome_writer_basic_example.py  plate_5d_images.py  pymmcore_plus.py  pymmcore_plus_example.py  pymmcore_plus_hcs_example.py  pymmcore_plus_plate_example.py  single_5d_image.py  transposed_5d_image.py  unbounded_timelapse.py  useq_grid_example.py  useq_schema_example.py  useq_schema_grid_example.py  useq_schema_hcs_example.py  useq_schema_plate_example.py  yaozarrs_multi_position_example.py  yaozarrs_multi_position_reorder_axis_example.py  yaozarrs_single_position_example.py  yaozarrs_tensorstore_multi_position_example.py  yaozarrs_tensorstore_multi_position_reorder_axis_example.py  yaozarrs_tensorstore_plate_example.py  (+2 more)
examples/_backends/: acquire_zarr_image.py
examples/temp/: bench.py
profiling/: benchmark.py
src/ome_writers/: AquireZarrStream.py  DimensionInfo.py  OMEStream.py  TensorStoreZarrStream.py  __init__.py  _acquire_zarr.py  _array_view.py  _auto.py  _backend.py  _coord_tracker.py  _dimensions.py  _frame_encoder.py  _memory.py  _ngff_metadata.py  _plate.py  _router.py  _schema.py  _stream.py  _stream_base.py  _stream_view.py  _tensorstore.py  _tiff_stream.py  _units.py  _useq.py  _util.py  backend.py  router.py  schema.py  schema_pydantic.py
src/ome_writers/_backends/: _acquire_zarr.py  _backend.py  _live_tiff_store.py  _memory.py  _ome_xml.py  _scratch.py  _tensorstore.py  _tiff_array.py  _tifffile.py  _yaozarrs.py  _zarr_python.py
src/ome_writers/backends/: _TO_REMOVE_tifffile_memmap.py  _TO_REMOVE_tifffile_ram.py  _acquire_zarr.py  _acquire_zarr_plate.py  _backend.py  _chunk_buffer.py  _old_tensorstore.py  _tensorstore.py  _tiff_stream.py  _tifffile.py  _tifffile_memmap.py  _tifffile_mmap.py  _tifffile_plate_wip.py  _yaozarrs.py  _zarr.py  _zarr_python.py
tests/: _bf_reader.py  _frame_encoder.py  _utils.py  conftest.py  test_acquire_zarr_metadata.py  test_acquire_zarr_streaming.py  test_array_view.py  test_auto_coverage.py  test_axis_order.py  test_axis_order_zarr.py  test_bench.py  test_benchmark.py  test_benchmark_cli.py  test_chunk_buffer.py  test_compression.py  test_conversions.py  test_coord_tracker.py  test_coverage_improvements.py  test_dimensions.py  test_dimensions_conversions.py  test_dynamic_view_shape.py  test_examples.py  test_global_metadata.py  test_hcs_acquire_zarr.py  test_integration.py  test_live_shape.py  test_live_tiff_viewing.py  test_memory_backend.py  test_misc.py  test_ngff_metadata.py  test_ome_tiff_metadata_writer.py  test_ome_writers.py  test_plate.py  test_plate_from_useq.py  test_plate_util.py  test_pymmcore_plus.py  test_router.py  test_schema.py  test_schema_router.py  test_summary_metadata.py  (+9 more)
tests/tests_hcs/: test_hcs_acquire_zarr.py  test_hcs_axis_order.py  test_hcs_conversions.py  test_hcs_pymmcore_plus.py  test_hcs_tensorstore.py
tools/: _common.py  benchmark.py  profiler.py
